--- a/gb/22/3/12/n13641196.md
+++ b/gb/22/3/12/n13641196.md
@@ -1,29 +1,29 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hlsodg3891/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hlsodg3891/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hlsodg3891/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>俄乌战 专家关注中共威胁 探讨如何抵抗</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/03/id13642650-2203130151582378-600x400.jpg" />
-<h6>黑潮城市发展协会理事长吴峥（右3）、台北市议员苗博雅（右2）、林亮君（右1）2022年3月12日在台北举办2场座谈会，台湾智库咨询委员赖怡忠（右5）、日本资深媒体人矢板明夫（右4）出席第1场与谈。（钟元／大纪元）
+<h6>黑潮城市发展协会理事长吴峥（前排右3）、台北市议员苗博雅（右2）、林亮君（右1）2022年3月12日在台北举办2场座谈会，台湾智库咨询委员赖怡忠（右5）、日本资深媒体人矢板明夫（右4）出席第1场与谈。（台北市议员苗博雅办公室提供）
 </h6>
 <hr>
-	<p>【大纪元2022年03月13日讯】（大纪元记者钟元台北报导）<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C%E6%88%98.md#1">俄乌战</a>争开打，引发国际关注中共对民主的威胁，可能攻打台湾。4位专家在台北的座谈会，从俄乌开战带来的启示，探讨民主国家如何抵抗<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E6%9E%81%E6%9D%83%E4%BE%B5%E7%95%A5.md#1">极权侵略</a>。</p>
-<p><ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>入侵<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>，乌克兰军民奋勇抵抗精神，激发民主国家同情并声援乌克兰对抗强权，也关注极权国家中共对世界和平的威胁，尤其台湾如何应对中共武力扩张，确保台海安全受瞩目。</p>
+	<p>【大纪元2022年03月13日讯】（大纪元记者钟元台北报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C%E6%88%98.md#1">俄乌战</a>争开打，引发国际关注中共对民主的威胁，可能攻打台湾。4位专家在台北的座谈会，从俄乌开战带来的启示，探讨民主国家如何抵抗<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9E%81%E6%9D%83%E4%BE%B5%E7%95%A5.md#1">极权侵略</a>。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>入侵<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>，乌克兰军民奋勇抵抗精神，激发民主国家同情并声援乌克兰对抗强权，也关注极权国家中共对世界和平的威胁，尤其台湾如何应对中共武力扩张，确保台海安全受瞩目。</p>
 <h2>赖怡忠：欧美“疑中”趋势上升 局势发展对中共不利</h2>
 <p>台湾智库咨询委员赖怡忠、日本资深媒体人矢板明夫、台湾制宪基金会副执行长宋承恩、台湾民主实验室理事长沈伯洋，出席由黑潮城市发展协会理事长吴峥、台北市议员苗博雅、林亮君12日在台北举办的座谈会，当天有近百名民众到场参加活动。</p>
-<p>赖怡忠说，<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C%E6%88%98.md#1">俄乌战</a>争对国际局势带来重大转变，包括德国出现二战后最大外交政策转向，国防预算会超过2％GDP，并准许向冲突地区输出武器，放弃北溪二号天然气（Nord-2）。欧盟重新检讨经济拉拢能力，也团结对俄，欧盟更与北约展开紧密合作。欧洲秩序与<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>总统普京（Vladimir Putin）政权已无法相容。</p>
-<p>此外，他说，东欧领头挺<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>，英国积极军武支持。东欧对欧盟（对俄政策）影响力升高，法德在欧洲的影响力下降。观察欧盟战略自主声浪降，将与美国在情报、军事、科技的合作视为首要。</p>
-<p>赖怡忠指出，中共因俄乌战争陷入糟糕处境，共军实力将被重新检验。而且中共拜托俄延后攻乌，此举违反中乌友好条约、还事情知情不报、且事后积极宣传俄对乌的叙事，让人质疑中俄和谋／合作攻乌？不仅中欧关系无法好转，美国也未将资源转移欧洲，反而持续提升印太防卫，欧美“疑中”趋势不断上升。</p>
+<p>赖怡忠说，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C%E6%88%98.md#1">俄乌战</a>争对国际局势带来重大转变，包括德国出现二战后最大外交政策转向，国防预算会超过2％GDP，并准许向冲突地区输出武器，放弃北溪二号天然气（Nord-2）。欧盟重新检讨经济拉拢能力，也团结对俄，欧盟更与北约展开紧密合作。欧洲秩序与<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>总统普京（Vladimir Putin）政权已无法相容。</p>
+<p>此外，他说，东欧领头挺<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>，英国积极军武支持。东欧对欧盟（对俄政策）影响力升高，法德在欧洲的影响力下降。观察欧盟战略自主声浪降，将与美国在情报、军事、科技的合作视为首要。</p>
+<p>赖怡忠指出，中共因俄乌战争陷入糟糕处境，共军实力将被重新检验。而且中共拜托俄延后攻乌，此举违反中乌友好条约、还事前知情不报、且事后积极宣传俄对乌的叙事，让人质疑中俄和谋／合作攻乌？不仅中欧关系无法好转，美国也未将资源转移欧洲，反而持续提升印太防卫，欧美“疑中”趋势不断上升。</p>
 <p>他表示，俄罗斯因受制裁重创，将更加倚赖中共。分析中欧关系更不可能好转，无法离间美欧。而美国并未将资源大幅转向欧洲，在印太对中共的强竞争关系会持续。另外，反俄成欧洲主流，因中俄的关系，欧洲对中共的敌意更甚。俄侵乌军事表现跌破眼镜，中共势必要对共军实力再评估，东昇西降理论受重创。</p>
 <h2>矢板明夫吁台湾加强不对称作战能力 提升国际能见度</h2>
 <p>产经新闻台北支局长矢板明夫表示，此次战争带给台湾许多启示：首先便是让大众了解战争随时会来临，不需要借口，纵使台湾不挑衅中共，中共仍能找到侵略理由。</p>
 <p>“俄罗斯以为可以打赢战争”，他说，但普京对俄国和乌克兰的实力，以及国际的形势误判。俄乌战争打下来，国际发现俄军的装备、士兵训练，部队整合程度表现很糟糕并不强大。由此推论中共是独裁、腐败国家，军队的贪污、机构臃肿等种种状况，更甚于俄军，所以共军效率一定非常低，也没有外界想像的强。</p>
 <p>矢板明夫说，过去战争重视兵力、武器，现代战争的情报战、资讯战、士气、宣传、国际制裁也很重要，而且战争的领袖也非常重要。在半年前美军从阿富汗撤军，阿富汗总统逃往国外，而乌克兰总统泽连斯基（Volodymyr Zelensky）鼓舞士气带领乌军奋战，吸引全世界的目光，获得国际社会同情。</p>
 <p>他强调，这启示台湾，若台海发生战争，台湾人选出谁来当总统就很重要，一定要能带领民众抵抗中共奋战到最后，才能争取国际对台湾的支持。这次俄乌战争是不对称作战，给大家留下很多的经验和教训，台湾也要加强不对称作战能力。他也强调，这次战争，台湾的国际地位提高很多，但台湾人一定要居安思危好好发展。</p>
-<p>主持人吴峥表示，这次俄乌战争，看到乌克兰抵抗的意志是非常坚定，也非常有决心，仅管他们在军备及兵力上是弱势，但不影响他们坚决要捍卫自己家园的意志。这给台湾很大的启示，台湾整体社会心防要建立，因为还听到有人说不要挑衅中共、轻起战端的话，“所以加强民众抵抗中共意志，将是很重要的任务”。</p>
+<p>主持人吴峥表示，这次俄乌战争，看到乌克兰抵抗的意志是非常坚定，也非常有决心，尽管他们在军备及兵力上是弱势，但不影响他们坚决要捍卫自己家园的意志。这给台湾很大的启示，台湾整体社会心防要建立，因为还听到有人说不要挑衅中共、轻起战端的话，“所以加强民众抵抗中共意志，将是很重要的任务”。</p>
 <p>苗博雅指出，在资讯爆炸的时代，不断看到包含国民党立委吴斯怀等人，持续唱衰台湾，提出“别让中（共）国不开心”的主张。“但俄乌战争经验告诉我们，这些失败主义言论，无法帮助台湾在复杂的国际局势中生存。”</p>
 <h2>宋承恩：吁台湾民众展现抵抗中共意志</h2>
 <p>宋承恩指出，除了国防、外交等大家普遍认知的防卫手段必须提升之外，台湾还迫切需要军队、国防体系大幅加强与社会大众的沟通，才能回应民间社会对台湾国防的支持。</p>
-<figure id="attachment_13642576" aria-describedby="caption-attachment-13642576" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/03/id13642576-2203120528102378.jpg"><img class="size-large wp-image-13642576" title="俄乌战 专家关注中共威胁 探讨抵抗极权侵略" src="https://i.epochtimes.com/assets/uploads/2022/03/id13642576-2203120528102378-600x285.jpg" alt="俄乌战 专家关注中共威胁 探讨抵抗极权侵略" width="600" b="285" /></a><figcaption id="caption-attachment-13642576" class="wp-caption-text">黑潮城市发展协会理事长吴峥（右5）、台北市议员苗博雅（右1）、林亮君（右2）在台北举办2场座谈会，台湾制宪基金会副执行长宋承恩（右3）、台湾民主实验室理事长沈伯洋（右4）出席第2场与谈。（钟元／大纪元）</figcaption></figure>
+<figure id="attachment_13642576" aria-describedby="caption-attachment-13642576" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/03/id13642576-2203120528102378.jpg"><img class="size-large wp-image-13642576" title="俄乌战 专家关注中共威胁 探讨抵抗极权侵略" src="https://i.epochtimes.com/assets/uploads/2022/03/id13642576-2203120528102378-600x285.jpg" alt="俄乌战 专家关注中共威胁 探讨抵抗极权侵略" width="600" b="285" /></a><figcaption id="caption-attachment-13642576" class="wp-caption-text">黑潮城市发展协会理事长吴峥（前排右5）、台北市议员苗博雅（右1）、林亮君（右2）在台北举办2场座谈会，台湾制宪基金会副执行长宋承恩（右3）、台湾民主实验室理事长沈伯洋（右4）出席第2场与谈。（钟元／大纪元）</figcaption></figure>
 <p>他说，台湾还必须注意中、俄两国，对乌克兰、台湾在去主权化行为的互相学习。也必须小心中共向台湾人民发居住证的问题，台湾人须了解极权国家的侵蚀手法，并提出相应安全机制。他强调，在全球公民社会，公民行动会推动政府政策走向，台湾人展现抵抗中共的意志，全球公民才有提供帮助台湾的意愿。</p>
 <h2>沈伯洋：面对中共对台心战、统战 建立敌我意识重要</h2>
 <p>台北大学犯罪学研究所助理教授沈伯洋表示，从2014年到2020年观察俄罗斯对乌克兰的混和战，去比对中共对台湾的手法，有非常多雷同的地方。俄罗斯扶植很多的亲俄势力，利用公投的方式或透过地方领导人的变节，想要把乌克兰反俄的情绪往下压。台湾应以此为鉴，也点出地方的市长、里长、立委／议员助理，都是中共想要统战的对象。</p>
@@ -38,35 +38,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639842.md#1">俄乌战争促印太多国提升对中共强硬立场</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13640121.md#1">俄乌战引致战略性调整 欧洲领袖宣布应变计划</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13640319.md#1">俄乌战引发股市震荡 谢金河：中企股最惨烈</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13640384.md#1">联合国报告：俄乌战或致全球粮价上涨22%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/11/n13639842.md#1">俄乌战争促印太多国提升对中共强硬立场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/11/n13640121.md#1">俄乌战引致战略性调整 欧洲领袖宣布应变计划</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/12/n13640319.md#1">俄乌战引发股市震荡 谢金河：中企股最惨烈</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/12/n13640384.md#1">联合国报告：俄乌战或致全球粮价上涨22%</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/8/n10285795.md#1" target="_blank">改革开放总设计师还是“总扼制师”？(下)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/11/n11861529.md#1">瘟疫来势汹汹  为何绕开了这些人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/1/n7484186.md#1" target="_blank">湖北女子患舌癌陷入绝境 修大法八天获救</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hlsodg3891/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hlsodg3891/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/12/n13641196.htm">俄乌战 专家关注中共威胁 探讨如何抵抗</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/12/n13641196.htm">俄乌战 专家关注中共威胁 探讨如何抵抗</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13641196.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hlsodg3891/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hlsodg3891/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hlsodg3891/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/22/3/12/n13641196.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
